GNOME Bugzilla – Bug 614339
libslab 2.29.0/2.27.91 does not show icons on documents tab on fedora 13
Last modified: 2010-06-28 13:04:39 UTC
Created attachment 157455 [details] [review] Patch to show icons on documents tab, Compiled libslab 2.29.0 and gnome-main-menu 0.9.14. Icons do not show on Documents tab. The following patch resolves issue for me for fedora 12/13 diff -ur libslab-2.27.91.orig/libslab/document-tile.c libslab-2.27.91/libslab/document-tile.c --- libslab-2.27.91.orig/libslab/document-tile.c 2009-08-25 14:02:58.000000000 -0400 +++ libslab-2.27.91/libslab/document-tile.c 2010-03-26 10:20:41.308295177 -0400 @@ -23,6 +23,7 @@ #include <glib/gi18n-lib.h> #include <string.h> +#include <libgnomeui/gnome-icon-lookup.h> #include <gio/gio.h> #include "slab-gnome-util.h" @@ -435,12 +436,10 @@ icon_id = gnome_desktop_thumbnail_factory_lookup (thumbnail_factory, TILE (tile)->uri, priv->modified); - if (! icon_id) { - icon = g_content_type_get_icon (priv->mime_type); - g_object_get (icon, "name", &icon_id, NULL); - - g_object_unref (icon); - } + if (! icon_id) + icon_id = gnome_icon_lookup ( + gtk_icon_theme_get_default (), thumbnail_factory, + TILE (tile)->uri, NULL, NULL, priv->mime_type, 0, NULL); exit: Only in libslab-2.27.91/libslab: document-tile.c.orig diff -ur libslab-2.27.91.orig/libslab.pc.in libslab-2.27.91/libslab.pc.in --- libslab-2.27.91.orig/libslab.pc.in 2009-07-21 16:35:25.000000000 -0400 +++ libslab-2.27.91/libslab.pc.in 2010-03-26 10:20:41.308295177 -0400 @@ -5,7 +5,7 @@ Name: libslab Description: Beautiful App Slab -Requires: glib-2.0 gobject-2.0 gtk+-2.0 gnome-desktop-2.0 libgnome-menu gconf-2.0 +Requires: glib-2.0 gobject-2.0 gtk+-2.0 gnome-desktop-2.0 libgnome-menu gconf-2.0 libgnomeui-2.0 Requires.private: gdk-2.0 librsvg-2.0 Version: @VERSION@ Libs: -L${libdir} -lslab
Comment on attachment 157455 [details] [review] Patch to show icons on documents tab, That sounds wrong: we shouldn't need libgnomeui for this, and g_content_type_get_icon() is supposed to work fine, so that's what should be investigated.
Should be fixed in master now.