Make icons on document tab work fine

We were simply not using the GIcon we got from the mime type.

https://bugzilla.gnome.org/show_bug.cgi?id=614339